--- a/web.html
+++ b/web.html
@@ -213,8 +213,8 @@
                     </div>
                 </div>
             </div>
-            <scroll-top>
-                <a href="#"><i class="btn-top"><span class="scroll"></span></i></a>         
+            <scroll-top class="scrollTop">
+                <a href="#"><i class="btn-top"><span class="scroll"></span></i></a>
             </scroll-top>
         </main>
 
