--- a/product-details.html
+++ b/product-details.html
@@ -67,6 +67,9 @@
                 </div>
             </div>
         </main>
+        <scroll-top class="scrollTop">
+            <a href="#"><i class="btn-top"><span class="scroll"></span></i></a>
+        </scroll-top>
         <!-- Make Footer -->
         <footer id="footer">
             <script>
